test/good/strings/comprehension01.px

a = [(c, c') for c in "AB" for c' in "CCD" by 2]
for x in a do
    print x
