test/bad/arrays/comprehension09.px

[for (a, b), c in [("d", true)] yield x]
